--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tom Haus | CTO</title>
+  <title>Tom Haus | Technology and Financial Services Transformation Leader</title>
   <meta name="description" content="Official personal website for Tom Haus, CTO at Transamerica.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -422,7 +422,7 @@
     <h2>About Me</h2>
     <div class="about-container">
       <!-- Replace 'tom-haus.jpg' with your actual image path -->
-      <img src="tom-haus.jpg" alt="Tom Haus headshot">
+      <img src="tom-haus.jpg" alt="Tom Haus headshot" width=150 height=150>
       <p>
         I’m Tom Haus, a tech leader at Transamerica with a deep background in guiding 
         large-scale digital transformations for financial services. My ethos: always 
