--- a/test.html
+++ b/test.html
@@ -412,7 +412,6 @@
       Let’s connect.
     </p>
     <div class="contact-content">
-      <a href="mailto:tom@example.com">tom@example.com</a>
       <a href="https://linkedin.com/in/tomhaus" target="_blank" rel="noopener">LinkedIn Profile</a>
     </div>
   </section>
@@ -422,7 +421,7 @@
     <h2>About Me</h2>
     <div class="about-container">
       <!-- Replace 'tom-haus.jpg' with your actual image path -->
-      <img src="tom-haus.jpg" alt="Tom Haus headshot" width=150 height=150>
+      <img src="tom-haus.jpg" alt="Tom Haus" width=150 height=150>
       <p>
         I’m Tom Haus, a tech leader at Transamerica with a deep background in guiding 
         large-scale digital transformations for financial services. My ethos: always 
