--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
 
     <ul>
       <!-- my domain -->
-      <li>Me: <a class="u-url" href="https://tomhaus.net" rel="me">tomhaus.net</a></li>
-      <li>io: <a class="u-url" href="https://www.tomhaus.net" rel="me">www.tomhaus.net</a></li>
-      <li>io: <a class="u-url" href="https://tomhaus.io" rel="me">tomhaus.io</a></li>
-      <li>io: <a class="u-url" href="https://www.tomhaus.io" rel="me">www.tomhaus.io</a></li>
+      <li>About Me: <a class="u-url" href="https://www.tomhaus.com" rel="me">www.tomhaus.com</a></li>
       <li>Blog: <a class="u-url" href="https://www.tomhaus.me" rel="me">www.tomhaus.me</a></li>
       <li>Microblog: <a class="u-uid u-url" href="https://www.tomhaus.com" rel="me">www.tomhaus.com</a><a href="https://tomhaus.micro.blog" rel="me"> </a></li>
       <li>Scribbles: <a class="u-url" href="https://blips.tomhaus.me" rel="me">Scribbles</a></li>
