--- a/test.html
+++ b/test.html
@@ -441,6 +441,28 @@
         and celebrate it, every step of the way.
       </p>
     </div>
+      <!-- Reference for representative h-card properties: https://microformats.org/wiki/h-card -->
+  <main class="h-card" rel="author">
+      <img class="u-photo" alt="My profile photo" src="webResult.jpg" width="150" height="150"/>
+    <h1>
+      I'm <span class="p-name">Tom Haus</span>.
+    </h1>
+
+    <p class="p-note">
+      ...and I am a human on the Internet.
+    </p>
+
+    <ul>
+      <!-- my domain -->
+      <li>About Me: <a class="u-url" href="https://www.tomhaus.com" rel="me">www.tomhaus.com</a></li>
+      <li>Blog: <a class="u-url" href="https://www.tomhaus.me" rel="me">www.tomhaus.me</a></li>
+      <li>Microblog: <a class="u-uid u-url" href="https://www.tomhaus.com" rel="me">www.tomhaus.com</a><a href="https://tomhaus.micro.blog" rel="me"> </a></li>
+      <li>Scribbles: <a class="u-url" href="https://blips.tomhaus.me" rel="me">Scribbles</a></li>
+      <li>Mastodon: <a class="u-uid u-url" href="https://mastodon.social/@tomhaus" rel="me">Mastodon</a></li>
+      <li>Github: <a class="u-uid u-url" href="https://github.com/thomashaus" rel="me">@thomashaus</a></li>
+    </ul>
+  </main>
+
   </section>
 
   <!-- FOOTER -->
