--- a/test.html
+++ b/test.html
@@ -421,9 +421,10 @@
     <h2>About Me</h2>
     <div class="about-container">
       <!-- Replace 'tom-haus.jpg' with your actual image path -->
-      <img src="tom-haus.jpg" alt="Tom Haus" width=150 height=150>
-      <p>
-        I’m Tom Haus, a tech leader at Transamerica with a deep background in guiding 
+      <main class="h-card" rel="author">
+      <img class="u-photo" alt="My profile photo" src="tom-haus.jpg" alt="Tom Haus" width=150 height=150>
+      <p class="p-note">
+        I’m <span class="p-name">Tom Haus</span>, a tech leader at Transamerica with a deep background in guiding 
         large-scale digital transformations for financial services. My ethos: always 
         <strong>Learn</strong> new possibilities, <strong>Build</strong> solutions with real 
         impact, and <strong>Enjoy</strong> the journey from vision to execution.
@@ -441,17 +442,6 @@
         and celebrate it, every step of the way.
       </p>
     </div>
-      <!-- Reference for representative h-card properties: https://microformats.org/wiki/h-card -->
-  <main class="h-card" rel="author">
-      <img class="u-photo" alt="My profile photo" src="webResult.jpg" width="150" height="150"/>
-    <h1>
-      I'm <span class="p-name">Tom Haus</span>.
-    </h1>
-
-    <p class="p-note">
-      ...and I am a human on the Internet.
-    </p>
-
     <ul>
       <!-- my domain -->
       <li>About Me: <a class="u-url" href="https://www.tomhaus.com" rel="me">www.tomhaus.com</a></li>
