--- a/test.html
+++ b/test.html
@@ -442,15 +442,9 @@
         and celebrate it, every step of the way.
       </p>
     </div>
-    <ul>
+    <center>
       <!-- my domain -->
-      <li>About Me: <a class="u-url" href="https://www.tomhaus.com" rel="me">www.tomhaus.com</a></li>
-      <li>Blog: <a class="u-url" href="https://www.tomhaus.me" rel="me">www.tomhaus.me</a></li>
-      <li>Microblog: <a class="u-uid u-url" href="https://www.tomhaus.com" rel="me">www.tomhaus.com</a><a href="https://tomhaus.micro.blog" rel="me"> </a></li>
-      <li>Scribbles: <a class="u-url" href="https://blips.tomhaus.me" rel="me">Scribbles</a></li>
-      <li>Mastodon: <a class="u-uid u-url" href="https://mastodon.social/@tomhaus" rel="me">Mastodon</a></li>
-      <li>Github: <a class="u-uid u-url" href="https://github.com/thomashaus" rel="me">@thomashaus</a></li>
-    </ul>
+      <a class="u-url" href="https://www.tomhaus.com" rel="me">About</a> - <a class="u-url" href="https://www.tomhaus.net" rel="me">Blog</a> - <a class="u-uid u-url" href="https://www.tomhaus.me" rel="me">About</a><a href="https://tomhaus.micro.blog" rel="me"> </a> - <a class="u-url" href="https://blips.tomhaus.me" rel="me">Scribbles</a> - <a class="u-uid u-url" href="https://mastodon.social/@tomhaus" rel="me">Mastodon</a> - <a class="u-uid u-url" href="https://www.tomhaus.io" rel="me">Github</a><a class="u-uid u-url" href="https://github.com/thomashaus" rel="me"> </a></center>
   </main>
 
   </section>
