--- a/test.html
+++ b/test.html
@@ -422,7 +422,7 @@
     <div class="about-container">
       <!-- Replace 'tom-haus.jpg' with your actual image path -->
       <main class="h-card" rel="author">
-      <img class="u-photo" alt="My profile photo" src="tom-haus.jpg" alt="Tom Haus" width=150 height=150>
+      <center><img class="u-photo" alt="My profile photo" src="tom-haus.jpg" alt="Tom Haus" width=150 height=150></center>
       <p class="p-note">
         I’m <span class="p-name">Tom Haus</span>, a tech leader at Transamerica with a deep background in guiding 
         large-scale digital transformations for financial services. My ethos: always 
