--- a/index.html
+++ b/index.html
@@ -1,30 +1,463 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Tom Haus | Technology and Financial Services Transformation Leader</title>
+  <meta name="description" content="Official personal website for Tom Haus, CTO at Transamerica.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Favicon (Optional) -->
+  <!-- <link rel="icon" href="path/to/favicon.png" type="image/png"> -->
+
+  <style>
+    /* RESET & BASE */
+    * {
+      margin: 0; 
+      padding: 0; 
+      box-sizing: border-box;
+      scroll-behavior: smooth;
+    }
+    body {
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      background-color: #000; /* Dark background for a bold aesthetic */
+      color: #fff;
+      line-height: 1.5;
+    }
+    a {
+      text-decoration: none;
+      color: #fff;
+    }
+    ul { list-style: none; }
+    
+    /* HEADER / NAVIGATION */
+    header {
+      width: 100%;
+      padding: 20px;
+      background: rgba(0, 0, 0, 0.85);
+      position: fixed;
+      top: 0;
+      z-index: 999;
+    }
+    .nav-container {
+      max-width: 1200px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .nav-logo {
+      font-size: 1.3rem;
+      font-weight: 700;
+      letter-spacing: 1px;
+    }
+    nav ul {
+      display: flex;
+      gap: 20px;
+    }
+    nav li {
+      font-size: 1rem;
+      font-weight: 500;
+    }
+    nav li a:hover {
+      opacity: 0.7;
+    }
+
+    /* HERO SECTION */
+    .hero {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh; /* ensures full screen on most devices */
+      padding: 0 20px;
+      text-align: center;
+    }
+    .hero h1 {
+      font-size: 3rem;
+      letter-spacing: 1px;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      max-width: 800px;
+      margin: 0 auto 2rem;
+      line-height: 1.7;
+    }
+    .hero .cta-button {
+      border: 2px solid #fff;
+      border-radius: 4px;
+      padding: 1rem 2rem;
+      font-size: 1rem;
+      transition: background 0.3s ease;
+    }
+    .hero .cta-button:hover {
+      background: #fff;
+      color: #000;
+    }
+
+    /* MAIN SECTIONS */
+    .section {
+      padding: 60px 20px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .section h2 {
+      font-size: 2rem;
+      margin-bottom: 30px;
+      text-align: center;
+      font-weight: 700;
+    }
+    .section p {
+      font-size: 1.1rem;
+      max-width: 900px;
+      margin: 0 auto 20px;
+      text-align: center;
+      line-height: 1.7;
+    }
+
+    /* TECHNOLOGY STRATEGY SECTION */
+    .tech-strategy {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 40px;
+      max-width: 1000px;
+      margin: 0 auto;
+      justify-content: center;
+      margin-top: 40px;
+    }
+    .pillar {
+      flex: 1 1 300px;
+      background: #111;
+      padding: 20px;
+      border-radius: 6px;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.05);
+    }
+    .pillar h3 {
+      font-size: 1.2rem;
+      margin-bottom: 0.5rem;
+    }
+    .pillar p {
+      font-size: 1rem;
+      text-align: left;
+      margin-bottom: 0;
+    }
+
+    /* BLOG SECTION */
+    .blog-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+    .blog-article {
+      background: #111;
+      padding: 20px;
+      border-radius: 6px;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.05);
+      width: 100%;
+      text-align: left;
+    }
+    .blog-article h3 {
+      font-size: 1.3rem;
+      margin-bottom: 10px;
+    }
+    .blog-article p {
+      font-size: 1rem;
+      line-height: 1.6;
+    }
+    .blog-article a {
+      color: #fff;
+      text-decoration: underline;
+      margin-top: 10px;
+      display: inline-block;
+    }
+    .blog-article a:hover {
+      opacity: 0.7;
+    }
+
+    /* PASSIONS & BEYOND WORK SECTION */
+    .hobbies-grid {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      max-width: 1000px;
+      margin: 40px auto 0;
+      justify-content: center;
+    }
+    .hobby {
+      flex: 1 1 300px;
+      background: #111;
+      padding: 20px;
+      border-radius: 6px;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.05);
+      text-align: center;
+    }
+    .hobby h3 {
+      font-size: 1.2rem;
+      margin-bottom: 0.5rem;
+    }
+    .hobby p {
+      font-size: 1rem;
+      margin-bottom: 0;
+    }
+
+    /* CONTACT SECTION */
+    .contact-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 15px;
+      text-align: center;
+    }
+    .contact-content a:hover {
+      opacity: 0.7;
+    }
+
+    /* ABOUT ME SECTION */
+    .about-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 1000px;
+      margin: 0 auto;
+      gap: 20px;
+    }
+    .about-container img {
+      max-width: 200px;
+      border-radius: 50%;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+    }
+    .about-container p {
+      font-size: 1.1rem;
+      text-align: center;
+      line-height: 1.7;
+      max-width: 800px;
+    }
+
+    /* FOOTER */
+    footer {
+      text-align: center;
+      padding: 20px 0;
+      background-color: #111;
+      color: #888;
+      margin-top: 80px;
+    }
+    footer p {
+      font-size: 0.9rem;
+      margin-bottom: 5px;
+    }
+    footer a {
+      font-size: 0.9rem;
+      color: #888;
+    }
+  </style>
+</head>
 <body>
-  <!-- Reference for representative h-card properties: https://microformats.org/wiki/h-card -->
-  <main class="h-card" rel="author">
-      <img class="u-photo" alt="My profile photo" src="webResult.jpg" width="150" height="150"/>
-    <h1>
-      I'm <span class="p-name">Tom Haus</span>.
-    </h1>
+  <!-- HEADER / NAV -->
+  <header>
+    <div class="nav-container">
+      <div class="nav-logo"><a href="#home">TOM HAUS</a></div>
+      <nav>
+        <ul>
+          <li><a href="#strategy">Tech Strategy</a></li>
+          <li><a href="#blog">Blog</a></li>
+          <li><a href="#passions">Beyond Work</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#about-me">About Me</a></li>
+          <li><a href="https://linkedin.com/in/tomhaus" target="_blank" rel="noopener">LinkedIn</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <p class="p-note">
-      ...and I am a human on the Internet.
+  <!-- HERO SECTION -->
+  <section class="hero" id="home">
+    <h1>Learn, Build, and Enjoy the Journey</h1>
+    <p>
+      I’m Tom Haus, Middle Market CTO at Transamerica.<br>
+      I help people Learn new technology, Build transformative solutions, 
+      and Enjoy the journey to financial security.
     </p>
+    <a href="#strategy" class="cta-button">Explore My Approach</a>
+  </section>
 
-    <ul>
+  <!-- TECHNOLOGY STRATEGY SECTION -->
+  <section class="section" id="strategy">
+    <h2>My Technology Strategy</h2>
+    <p>
+      Whether you want to <strong>Learn</strong> about innovative fintech tools, <strong>Build</strong> a more 
+      resilient organization, or <strong>Enjoy</strong> watching your vision come to life, 
+      these six pillars guide my work in the financial industry.
+    </p>
+    <div class="tech-strategy">
+      <div class="pillar">
+        <h3>1. Developing Technology Strategies for the Financial Industry</h3>
+        <p>
+          From concept to rollout, I align each step with business goals. 
+          This strategy-first mindset makes learning simpler, building faster, 
+          and results more impactful.
+        </p>
+      </div>
+      <div class="pillar">
+        <h3>2. Digitization</h3>
+        <p>
+          Creating immersive digital experiences for customers and teams 
+          sets the foundation for real growth—turning barriers into learning opportunities.
+        </p>
+      </div>
+      <div class="pillar">
+        <h3>3. Automation & AI Solutions</h3>
+        <p>
+          When we automate repetitive tasks and harness AI, we free up our energy 
+          to build human-focused innovations. It’s about efficiency that lets us 
+          enjoy a more creative, proactive environment.
+        </p>
+      </div>
+      <div class="pillar">
+        <h3>4. Building High-Performing Leaders & Teams</h3>
+        <p>
+          Strong leadership cultures don’t just happen: they learn continuously, 
+          build winning mindsets, and enjoy a consistent track record of success.
+        </p>
+      </div>
+      <div class="pillar">
+        <h3>5. Security</h3>
+        <p>
+          Trust is earned by protecting data and processes at every layer. 
+          By prioritizing security, we ensure everyone can learn and adapt 
+          without fearing sudden setbacks.
+        </p>
+      </div>
+      <div class="pillar">
+        <h3>6. Measure & Metrics-Based Organization</h3>
+        <p>
+          Real progress is visible in metrics—data drives decisions, helps us 
+          build accountability, and lets us enjoy the wins by celebrating 
+          tangible results.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- BLOG SECTION -->
+  <section class="section" id="blog">
+    <h2>My Blog</h2>
+    <p>
+      Stay curious and keep learning—my latest posts on Ghost cover everything 
+      from harnessing AI to fueling financial security. Here’s a peek at one recent article.
+    </p>
+    <div class="blog-container">
+      <!-- Example blog post card -->
+      <div class="blog-article">
+        <h3>“Redefining Financial Security with AI”</h3>
+        <p>
+          AI is transforming how we Learn, Build, and Enjoy financial solutions—especially 
+          in the middle market. This article dives into the crucial shifts AI brings to 
+          underwriting, personalized insights, and more.
+        </p>
+        <a href="https://your-ghost-blog.com/redefining-financial-security-with-ai" target="_blank" rel="noopener">
+          Read the Full Article
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- PASSIONS & BEYOND WORK SECTION -->
+  <section class="section" id="passions">
+    <h2>Beyond Work</h2>
+    <p>
+      Learning, building, and enjoying don’t stop at the office. 
+      Here’s how I recharge and find fresh inspiration.
+    </p>
+    <div class="hobbies-grid">
+      <div class="hobby">
+        <h3>Photography</h3>
+        <p>
+          Capturing beautiful moments—sunsets, cityscapes, or candid family pictures—lets me learn 
+          to see the world with new eyes and enjoy the vibrant details.
+        </p>
+      </div>
+      <div class="hobby">
+        <h3>Nature & Hiking</h3>
+        <p>
+          A brisk hike helps me build stamina, clear my mind, and appreciate the journey, 
+          step by step—an ideal mirror for my work in tech.
+        </p>
+      </div>
+      <div class="hobby">
+        <h3>Family Time</h3>
+        <p>
+          Sharing meals, stories, and laughter reminds me to enjoy life’s simplest 
+          moments and build stronger relationships—both at home and in business.
+        </p>
+      </div>
+      <div class="hobby">
+        <h3>Educating on Financial Security</h3>
+        <p>
+          Teaching others how to create a secure financial future is a passion. 
+          I learn as much as I share, watching people take bold steps toward 
+          long-term independence.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- CONTACT SECTION -->
+  <section class="section" id="contact">
+    <h2>Contact</h2>
+    <p>
+      Ready to learn more, build new solutions, or simply enjoy a conversation? 
+      Let’s connect.
+    </p>
+    <div class="contact-content">
+      <a href="https://linkedin.com/in/tomhaus" target="_blank" rel="noopener">LinkedIn Profile</a>
+    </div>
+  </section>
+
+  <!-- ABOUT ME (AT THE END) -->
+  <section class="section" id="about-me">
+    <h2>About Me</h2>
+    <div class="about-container">
+      <!-- Replace 'tom-haus.jpg' with your actual image path -->
+      <main class="h-card" rel="author">
+      <center><img class="u-photo" alt="My profile photo" src="tom-haus.jpg" alt="Tom Haus" width=150 height=150></center>
+      <p class="p-note">
+        I’m <span class="p-name">Tom Haus</span>, a tech leader at Transamerica with a deep background in guiding 
+        large-scale digital transformations for financial services. My ethos: always 
+        <strong>Learn</strong> new possibilities, <strong>Build</strong> solutions with real 
+        impact, and <strong>Enjoy</strong> the journey from vision to execution.
+      </p>
+      <p>
+        From automating legacy systems to instilling metrics-based cultures, 
+        I’ve seen first-hand how a passion for learning creates powerful progress. 
+        My work involves bringing together cross-functional teams that act quickly, 
+        think strategically, and adapt continuously.
+      </p>
+      <p>
+        Inspired by my experiences at various companies—detailed on my 
+        <a href="https://linkedin.com/in/tomhaus" target="_blank" rel="noopener">LinkedIn</a>—I 
+        believe in building an environment where we measure success 
+        and celebrate it, every step of the way.
+      </p>
+    </div>
+    <center>
       <!-- my domain -->
-      <li>About Me: <a class="u-url" href="https://www.tomhaus.com" rel="me">www.tomhaus.com</a></li>
-      <li>Blog: <a class="u-url" href="https://www.tomhaus.me" rel="me">www.tomhaus.me</a></li>
-      <li>Microblog: <a class="u-uid u-url" href="https://www.tomhaus.com" rel="me">www.tomhaus.com</a><a href="https://tomhaus.micro.blog" rel="me"> </a></li>
-      <li>Scribbles: <a class="u-url" href="https://blips.tomhaus.me" rel="me">Scribbles</a></li>
-      <li>Mastodon: <a class="u-uid u-url" href="https://mastodon.social/@tomhaus" rel="me">Mastodon</a></li>
-      <li>Github: <a class="u-uid u-url" href="https://github.com/thomashaus" rel="me">@thomashaus</a></li>
-    </ul>
+      <a class="u-url" href="https://www.tomhaus.com" rel="me">About</a> - <a class="u-url" href="https://www.tomhaus.net" rel="me">Blog</a> - <a class="u-uid u-url" href="https://www.tomhaus.me" rel="me">About</a><a href="https://tomhaus.micro.blog" rel="me"> </a> - <a class="u-url" href="https://blips.tomhaus.me" rel="me">Scribbles</a> - <a class="u-uid u-url" href="https://mastodon.social/@tomhaus" rel="me">Mastodon</a> - <a class="u-uid u-url" href="https://www.tomhaus.io" rel="me">Github</a><a class="u-uid u-url" href="https://github.com/thomashaus" rel="me"> </a></center>
   </main>
 
-<script src="https://tinylytics.app/embed/ys_REMxcqP7GNUxQzLiG.js" defer></script>
-    
-<h1>Hello World</h1>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>&copy; <span id="year"></span> Tom Haus. All rights reserved.</p>
+  </footer>
+
+  <!-- OPTIONAL JAVASCRIPT -->
+  <script>
+    // Dynamically update year in footer
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
