--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Favicon (Optional) -->
-  <!-- <link rel="icon" href="path/to/favicon.png" type="image/png"> -->
+  <link rel="icon" href="Monogram HQ.png" type="image/png">
 
   <style>
     /* RESET & BASE */
@@ -293,7 +293,7 @@
     </p>
     <div class="tech-strategy">
       <div class="pillar">
-        <h3>1. Developing Technology Strategies for the Financial Industry</h3>
+        <h3>1. Developing Technology Strategies</h3>
         <p>
           From concept to rollout, I align each step with business goals. 
           This strategy-first mindset makes learning simpler, building faster, 
@@ -301,14 +301,14 @@
         </p>
       </div>
       <div class="pillar">
-        <h3>2. Digitization</h3>
+        <h3>2. Transformation</h3>
         <p>
-          Creating immersive digital experiences for customers and teams 
+          Creating immersive experiences for customers and teams 
           sets the foundation for real growth—turning barriers into learning opportunities.
         </p>
       </div>
       <div class="pillar">
-        <h3>3. Automation & AI Solutions</h3>
+        <h3>3. AI Solutions</h3>
         <p>
           When we automate repetitive tasks and harness AI, we free up our energy 
           to build human-focused innovations. It’s about efficiency that lets us 
@@ -316,14 +316,14 @@
         </p>
       </div>
       <div class="pillar">
-        <h3>4. Building High-Performing Leaders & Teams</h3>
+        <h3>4. Developing High-Performing Teams</h3>
         <p>
           Strong leadership cultures don’t just happen: they learn continuously, 
           build winning mindsets, and enjoy a consistent track record of success.
         </p>
       </div>
       <div class="pillar">
-        <h3>5. Security</h3>
+        <h3>5. Zero-Trust Security Systems</h3>
         <p>
           Trust is earned by protecting data and processes at every layer. 
           By prioritizing security, we ensure everyone can learn and adapt 
@@ -331,7 +331,7 @@
         </p>
       </div>
       <div class="pillar">
-        <h3>6. Measure & Metrics-Based Organization</h3>
+        <h3>6. Metrics-Based Organizations</h3>
         <p>
           Real progress is visible in metrics—data drives decisions, helps us 
           build accountability, and lets us enjoy the wins by celebrating 
@@ -441,10 +441,10 @@
         believe in building an environment where we measure success 
         and celebrate it, every step of the way.
       </p>
-    </div>
     <center>
-      <!-- my domain -->
-      <a class="u-url" href="https://www.tomhaus.com" rel="me">About</a> - <a class="u-url" href="https://www.tomhaus.net" rel="me">Blog</a> - <a class="u-uid u-url" href="https://www.tomhaus.me" rel="me">About</a><a href="https://tomhaus.micro.blog" rel="me"> </a> - <a class="u-url" href="https://blips.tomhaus.me" rel="me">Scribbles</a> - <a class="u-uid u-url" href="https://mastodon.social/@tomhaus" rel="me">Mastodon</a> - <a class="u-uid u-url" href="https://www.tomhaus.io" rel="me">Github</a><a class="u-uid u-url" href="https://github.com/thomashaus" rel="me"> </a></center>
+      <a class="u-url u-uid" href="https://www.tomhaus.com" rel="me">About</a> - <a class="u-url" href="https://www.tomhaus.net" rel="me">Blog</a> - <a class="u-uid u-url" href="https://www.tomhaus.me" rel="me">About</a><a href="https://tomhaus.micro.blog" rel="me"> </a> - <a class="u-url" href="https://blips.tomhaus.me" rel="me">Scribbles</a> - <a class="u-uid u-url" href="https://mastodon.social/@tomhaus" rel="me">Mastodon</a> - <a class="u-uid u-url" href="https://www.tomhaus.io" rel="me">Github</a><a class="u-uid u-url" href="https://github.com/thomashaus" rel="me"> </a>
+    </center>
+    </div>
   </main>
 
   </section>
