--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
   <section class="hero" id="home">
     <h1>Learn, Build, and Enjoy the Journey</h1>
     <p>
-      I’m Tom Haus, Middle Market CTO at Transamerica.<br>
+      I’m Tom Haus, a technology leader.<br>
       I help people Learn new technology, Build transformative solutions, 
       and Enjoy the journey to financial security.
     </p>
@@ -285,7 +285,7 @@
 
   <!-- TECHNOLOGY STRATEGY SECTION -->
   <section class="section" id="strategy">
-    <h2>My Technology Strategy</h2>
+    <h2>My Strategy</h2>
     <p>
       Whether you want to <strong>Learn</strong> about innovative fintech tools, <strong>Build</strong> a more 
       resilient organization, or <strong>Enjoy</strong> watching your vision come to life, 
@@ -293,7 +293,7 @@
     </p>
     <div class="tech-strategy">
       <div class="pillar">
-        <h3>1. Developing Technology Strategies</h3>
+        <h3>1. Developing Strategies</h3>
         <p>
           From concept to rollout, I align each step with business goals. 
           This strategy-first mindset makes learning simpler, building faster, 
