--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Tom Haus | Technology and Financial Services Transformation Leader</title>
-  <meta name="description" content="Official personal website for Tom Haus, CTO at Transamerica.">
+  <meta name="description" content="Official personal website for Tom Haus.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Favicon (Optional) -->
@@ -424,7 +424,7 @@
       <main class="h-card" rel="author">
       <center><img class="u-photo" alt="My profile photo" src="tom-haus.jpg" alt="Tom Haus" width=150 height=150></center>
       <p class="p-note">
-        I’m <span class="p-name">Tom Haus</span>, a tech leader at Transamerica with a deep background in guiding 
+        I’m <span class="p-name">Tom Haus</span>, a technology leader with a deep background in guiding 
         large-scale digital transformations for financial services. My ethos: always 
         <strong>Learn</strong> new possibilities, <strong>Build</strong> solutions with real 
         impact, and <strong>Enjoy</strong> the journey from vision to execution.
