--- a/index.html
+++ b/index.html
@@ -261,10 +261,8 @@
       <div class="nav-logo"><a href="#home">TOM HAUS</a></div>
       <nav>
         <ul>
-          <li><a href="#strategy">Tech Strategy</a></li>
           <li><a href="#blog">Blog</a></li>
           <li><a href="#passions">Beyond Work</a></li>
-          <li><a href="#contact">Contact</a></li>
           <li><a href="#about-me">About Me</a></li>
           <li><a href="https://linkedin.com/in/tomhaus" target="_blank" rel="noopener">LinkedIn</a></li>
         </ul>
@@ -282,65 +280,7 @@
     </p>
     <a href="#strategy" class="cta-button">Explore My Approach</a>
   </section>
-
-  <!-- TECHNOLOGY STRATEGY SECTION -->
-  <section class="section" id="strategy">
-    <h2>My Strategy</h2>
-    <p>
-      Whether you want to <strong>Learn</strong> about innovative fintech tools, <strong>Build</strong> a more 
-      resilient organization, or <strong>Enjoy</strong> watching your vision come to life, 
-      these six pillars guide my work in the financial industry.
-    </p>
-    <div class="tech-strategy">
-      <div class="pillar">
-        <h3>1. Developing Strategies</h3>
-        <p>
-          From concept to rollout, I align each step with business goals. 
-          This strategy-first mindset makes learning simpler, building faster, 
-          and results more impactful.
-        </p>
-      </div>
-      <div class="pillar">
-        <h3>2. Transformation</h3>
-        <p>
-          Creating immersive experiences for customers and teams 
-          sets the foundation for real growth—turning barriers into learning opportunities.
-        </p>
-      </div>
-      <div class="pillar">
-        <h3>3. AI Solutions</h3>
-        <p>
-          When we automate repetitive tasks and harness AI, we free up our energy 
-          to build human-focused innovations. It’s about efficiency that lets us 
-          enjoy a more creative, proactive environment.
-        </p>
-      </div>
-      <div class="pillar">
-        <h3>4. Developing High-Performing Teams</h3>
-        <p>
-          Strong leadership cultures don’t just happen: they learn continuously, 
-          build winning mindsets, and enjoy a consistent track record of success.
-        </p>
-      </div>
-      <div class="pillar">
-        <h3>5. Zero-Trust Security Systems</h3>
-        <p>
-          Trust is earned by protecting data and processes at every layer. 
-          By prioritizing security, we ensure everyone can learn and adapt 
-          without fearing sudden setbacks.
-        </p>
-      </div>
-      <div class="pillar">
-        <h3>6. Metrics-Based Organizations</h3>
-        <p>
-          Real progress is visible in metrics—data drives decisions, helps us 
-          build accountability, and lets us enjoy the wins by celebrating 
-          tangible results.
-        </p>
-      </div>
-    </div>
-  </section>
-
+  
   <!-- BLOG SECTION -->
   <section class="section" id="blog">
     <h2>My Blog</h2>
@@ -404,18 +344,6 @@
     </div>
   </section>
 
-  <!-- CONTACT SECTION -->
-  <section class="section" id="contact">
-    <h2>Contact</h2>
-    <p>
-      Ready to learn more, build new solutions, or simply enjoy a conversation? 
-      Let’s connect.
-    </p>
-    <div class="contact-content">
-      <a href="https://linkedin.com/in/tomhaus" target="_blank" rel="noopener">LinkedIn Profile</a>
-    </div>
-  </section>
-
   <!-- ABOUT ME (AT THE END) -->
   <section class="section" id="about-me">
     <h2>About Me</h2>
@@ -442,7 +370,7 @@
         and celebrate it, every step of the way.
       </p>
     <center>
-      <a class="u-url u-uid" href="https://www.tomhaus.com" rel="me">About</a> - <a class="u-url" href="https://www.tomhaus.net" rel="me">Blog</a> - <a class="u-uid u-url" href="https://www.tomhaus.me" rel="me">About</a><a href="https://tomhaus.micro.blog" rel="me"> </a> - <a class="u-url" href="https://blips.tomhaus.me" rel="me">Scribbles</a> - <a class="u-uid u-url" href="https://mastodon.social/@tomhaus" rel="me">Mastodon</a> - <a class="u-uid u-url" href="https://www.tomhaus.io" rel="me">Github</a><a class="u-uid u-url" href="https://github.com/thomashaus" rel="me"> </a>
+      <a class="u-url u-uid" href="https://www.tomhaus.com" rel="me">About</a> - <a class="u-url" href="https://www.tomhaus.net" rel="me">Blog</a> - <a class="u-url" href="https://www.tomhaus.me" rel="me">About</a><a href="https://tomhaus.micro.blog" rel="me"> </a> - <a class="u-url" href="https://blips.tomhaus.me" rel="me">Scribbles</a> - <a class="u-url" href="https://mastodon.social/@tomhaus" rel="me">Mastodon</a> - <a class="u-url" href="https://www.tomhaus.io" rel="me">Github</a><a class="u-url" href="https://github.com/thomashaus" rel="me"> </a>
     </center>
     </div>
   </main>
