Update index.html. with Google Tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RDT9CYXRBM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RDT9CYXRBM');
+</script>
   <meta charset="UTF-8">
   <title>Tom Haus | Technology and Financial Services Transformation Leader</title>
   <meta name="description" content="Official personal website for Tom Haus.">
