--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ src="https://www.facebook.com/tr?id=3045467072349973&ev=PageView&noscript=1"
 <!-- End Meta Pixel Code -->
   
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-RDT9CYXRBM"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-89W9WP4PMW"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -29,6 +29,7 @@ src="https://www.facebook.com/tr?id=3045467072349973&ev=PageView&noscript=1"
 
   gtag('config', 'G-RDT9CYXRBM');
 </script>
+  
   <meta charset="UTF-8">
   <title>Tom Haus | Technology and Financial Services Transformation Leader</title>
   <meta name="description" content="Official personal website for Tom Haus.">
