--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ src="https://www.facebook.com/tr?id=3045467072349973&ev=PageView&noscript=1"
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-RDT9CYXRBM');
+  gtag('config', 'G-89W9WP4PMW');
 </script>
   
   <meta charset="UTF-8">
